--- a/faq.html
+++ b/faq.html
@@ -1,68 +1,34 @@
 <!DOCTYPE html>
-<html
-  lang="ar"
-  dir="rtl"
->
+<html lang="ar" dir="rtl">
   <head>
     <!-- Required Meta Tags -->
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <!-- Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/plugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/plugins.css" />
     <!-- Icon Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/iconplugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/iconplugins.css" />
     <!-- Style CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/style.css"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/responsive.css"
-    />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <!-- Theme Dark CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/theme-dark.css"
-    />
+    <link rel="stylesheet" href="assets/css/theme-dark.css" />
     <!-- RTL CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/rtl.css"
-    />
+    <link rel="stylesheet" href="assets/css/rtl.css" />
     <!--own CSS-->
-    <link
-      rel="stylesheet"
-      href="assets/css/own.css"
-    />
+    <link rel="stylesheet" href="assets/css/own.css" />
     <!-- Title -->
     <title>HOMEMADEFOOD</title>
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
     <!-- Pre Loader -->
@@ -76,16 +42,8 @@
           <div class="mobile-responsive-menu">
             <div class="logo">
               <a href="index.html">
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-one"
-                  alt="logo"
-                />
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-two"
-                  alt="logo"
-                />
+                <img src="assets/images/logo.png" class="logo-one" alt="logo" />
+                <img src="assets/images/logo.png" class="logo-two" alt="logo" />
               </a>
             </div>
           </div>
@@ -96,20 +54,9 @@
       <div class="desktop-nav nav-area">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-md navbar-light">
-            <a
-              class="navbar-brand"
-              href="index.html"
-            >
-              <img
-                src="assets/images/logo.png"
-                class="logo-one"
-                alt="Logo"
-              />
-              <img
-                src="assets/images/logo.png"
-                class="logo-two"
-                alt="Logo"
-              />
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
+              <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
 
             <div
@@ -118,48 +65,25 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    href="home.html"
-                    class="nav-link"
-                  >
-                    من نحن؟
-                  </a>
+                  <a href="home.html" class="nav-link"> من نحن؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="faq.html"
-                    class="nav-link active"
-                  >
-                    أسئلة شائعة؟
-                  </a>
+                  <a href="faq.html" class="nav-link active"> أسئلة شائعة؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="customer-review.html"
-                    class="nav-link"
-                  >
+                  <a href="customer-review.html" class="nav-link">
                     آراء العملاء
                   </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="contact-us.html"
-                    class="nav-link"
-                  >
-                    تواصل معنا
-                  </a>
+                  <a href="contact-us.html" class="nav-link"> تواصل معنا </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="app.html"
-                    class="nav-link"
-                  >
-                    حمل التطبيق
-                  </a>
+                  <a href="app.html" class="nav-link"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
@@ -172,11 +96,7 @@
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
         <div class="faq-img-absolute">
-          <img
-            src="./assets/images/faq.png"
-            class="faq-img-270"
-            alt="img"
-          />
+          <img src="./assets/images/faq.png" class="faq-img-270" alt="img" />
         </div>
 
         <div class="row align-items-center mb-45">
@@ -227,10 +147,7 @@
         </div>
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -240,10 +157,7 @@
             </p>
           </div>
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -271,10 +185,7 @@
         </div>
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -284,10 +195,7 @@
             </p>
           </div>
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -321,23 +229,23 @@
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>أسئلة شائعة؟</span></a>
+                    <a href="faq.html"><span>أسئلة شائعة؟</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>آراء العملاء</span></a>
+                    <a href="customer-review.html"><span>آراء العملاء</span></a>
                   </div>
                 </li>
 
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>تواصل معنا</span></a>
+                    <a href="contact-us.html"> <span>تواصل معنا</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>حمل التطبيق</span></a>
+                    <a href="app.html"> <span>حمل التطبيق</span></a>
                   </div>
                 </li>
               </ul>
@@ -349,10 +257,7 @@
                 <div class="footer-widget pb-0 text-center">
                   <ul class="social-link">
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/instagram.png"
                           class="instagram"
@@ -361,10 +266,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/twitter.png"
                           class="twitter"
@@ -373,10 +275,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/google-play.png"
                           class="google-store"
@@ -385,10 +284,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/apple-play.png"
                           class="apple-store"
