--- a/app.html
+++ b/app.html
@@ -1,68 +1,34 @@
 <!DOCTYPE html>
-<html
-  lang="ar"
-  dir="rtl"
->
+<html lang="ar" dir="rtl">
   <head>
     <!-- Required Meta Tags -->
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <!-- Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/plugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/plugins.css" />
     <!-- Icon Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/iconplugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/iconplugins.css" />
     <!-- Style CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/style.css"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/responsive.css"
-    />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <!-- Theme Dark CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/theme-dark.css"
-    />
+    <link rel="stylesheet" href="assets/css/theme-dark.css" />
     <!-- RTL CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/rtl.css"
-    />
+    <link rel="stylesheet" href="assets/css/rtl.css" />
     <!--own CSS-->
-    <link
-      rel="stylesheet"
-      href="assets/css/own.css"
-    />
+    <link rel="stylesheet" href="assets/css/own.css" />
     <!-- Title -->
     <title>HOMEMADEFOOD</title>
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
     <!-- Pre Loader -->
@@ -89,16 +55,8 @@
           <div class="mobile-responsive-menu">
             <div class="logo">
               <a href="index.html">
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-one"
-                  alt="logo"
-                />
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-two"
-                  alt="logo"
-                />
+                <img src="assets/images/logo.png" class="logo-one" alt="logo" />
+                <img src="assets/images/logo.png" class="logo-two" alt="logo" />
               </a>
             </div>
           </div>
@@ -109,20 +67,9 @@
       <div class="desktop-nav nav-area">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-md navbar-light">
-            <a
-              class="navbar-brand"
-              href="index.html"
-            >
-              <img
-                src="assets/images/logo.png"
-                class="logo-one"
-                alt="Logo"
-              />
-              <img
-                src="assets/images/logo.png"
-                class="logo-two"
-                alt="Logo"
-              />
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
+              <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
 
             <div
@@ -131,48 +78,25 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    href="home.html"
-                    class="nav-link"
-                  >
-                    من نحن؟
-                  </a>
+                  <a href="home.html" class="nav-link"> من نحن؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="faq.html"
-                    class="nav-link"
-                  >
-                    أسئلة شائعة؟
-                  </a>
+                  <a href="faq.html" class="nav-link"> أسئلة شائعة؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="customer-review.html"
-                    class="nav-link"
-                  >
+                  <a href="customer-review.html" class="nav-link">
                     آراء العملاء
                   </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="contact-us.html"
-                    class="nav-link"
-                  >
-                    تواصل معنا
-                  </a>
+                  <a href="contact-us.html" class="nav-link"> تواصل معنا </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="app.html"
-                    class="nav-link active"
-                  >
-                    حمل التطبيق
-                  </a>
+                  <a href="app.html" class="nav-link active"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
@@ -187,11 +111,7 @@
         <div class="app-green-50">&nbsp;</div>
         <div class="app-gray-148">&nbsp;</div>
         <div class="app-absolute">
-          <img
-            src="./assets/images/faq.png"
-            class="app-img"
-            alt="img"
-          />
+          <img src="./assets/images/faq.png" class="app-img" alt="img" />
         </div>
 
         <div class="row align-items-center mb-45">
@@ -202,19 +122,13 @@
                 <div class="col">
                   <h1 class="app-text-gray">متجر قوقل</h1>
                   <div class="">
-                    <img
-                      class="google"
-                      src="./assets/images/google.png"
-                    />
+                    <img class="google" src="./assets/images/google.png" />
                   </div>
                 </div>
                 <div class="col">
                   <h1 class="app-gray-text-center">متجر أبل</h1>
                   <div class="">
-                    <img
-                      class="apple"
-                      src="./assets/images/apple.png"
-                    />
+                    <img class="apple" src="./assets/images/apple.png" />
                   </div>
                 </div>
               </div>
@@ -250,23 +164,23 @@
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>أسئلة شائعة؟</span></a>
+                    <a href="faq.html"><span>أسئلة شائعة؟</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>آراء العملاء</span></a>
+                    <a href="customer-review.html"><span>آراء العملاء</span></a>
                   </div>
                 </li>
 
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>تواصل معنا</span></a>
+                    <a href="contact-us.html"> <span>تواصل معنا</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>حمل التطبيق</span></a>
+                    <a href="app.html"> <span>حمل التطبيق</span></a>
                   </div>
                 </li>
               </ul>
@@ -278,10 +192,7 @@
                 <div class="footer-widget pb-0 text-center">
                   <ul class="social-link">
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/instagram.png"
                           class="instagram"
@@ -290,10 +201,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/twitter.png"
                           class="twitter"
@@ -302,10 +210,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/google-play.png"
                           class="google-store"
@@ -314,10 +219,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/apple-play.png"
                           class="apple-store"
