--- a/contact-us.html
+++ b/contact-us.html
@@ -1,68 +1,34 @@
 <!DOCTYPE html>
-<html
-  lang="ar"
-  dir="rtl"
->
+<html lang="ar" dir="rtl">
   <head>
     <!-- Required Meta Tags -->
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <!-- Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/plugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/plugins.css" />
     <!-- Icon Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/iconplugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/iconplugins.css" />
     <!-- Style CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/style.css"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/responsive.css"
-    />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <!-- Theme Dark CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/theme-dark.css"
-    />
+    <link rel="stylesheet" href="assets/css/theme-dark.css" />
     <!-- RTL CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/rtl.css"
-    />
+    <link rel="stylesheet" href="assets/css/rtl.css" />
     <!--own CSS-->
-    <link
-      rel="stylesheet"
-      href="assets/css/own.css"
-    />
+    <link rel="stylesheet" href="assets/css/own.css" />
     <!-- Title -->
     <title>HOMEMADEFOOD</title>
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
     <!-- Pre Loader -->
@@ -89,16 +55,8 @@
           <div class="mobile-responsive-menu">
             <div class="logo">
               <a href="index.html">
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-one"
-                  alt="logo"
-                />
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-two"
-                  alt="logo"
-                />
+                <img src="assets/images/logo.png" class="logo-one" alt="logo" />
+                <img src="assets/images/logo.png" class="logo-two" alt="logo" />
               </a>
             </div>
           </div>
@@ -109,20 +67,9 @@
       <div class="desktop-nav nav-area">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-md navbar-light">
-            <a
-              class="navbar-brand"
-              href="index.html"
-            >
-              <img
-                src="assets/images/logo.png"
-                class="logo-one"
-                alt="Logo"
-              />
-              <img
-                src="assets/images/logo.png"
-                class="logo-two"
-                alt="Logo"
-              />
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
+              <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
 
             <div
@@ -131,48 +78,27 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    href="home.html"
-                    class="nav-link"
-                  >
-                    من نحن؟
-                  </a>
+                  <a href="home.html" class="nav-link"> من نحن؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="faq.html"
-                    class="nav-link"
-                  >
-                    أسئلة شائعة؟
-                  </a>
+                  <a href="faq.html" class="nav-link"> أسئلة شائعة؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="customer-review.html"
-                    class="nav-link"
-                  >
+                  <a href="customer-review.html" class="nav-link">
                     آراء العملاء
                   </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="contact-us.html"
-                    class="nav-link active"
-                  >
+                  <a href="contact-us.html" class="nav-link active">
                     تواصل معنا
                   </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="app.html"
-                    class="nav-link"
-                  >
-                    حمل التطبيق
-                  </a>
+                  <a href="app.html" class="nav-link"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
@@ -186,20 +112,14 @@
       <div class="contact-info-area pt-100 pb-70">
         <div class="container">
           <div class="row justify-content-center">
-            <div
-              class="col-lg-6 col-12 show-mobile"
-              style="height: 250px"
-            >
+            <div class="col-lg-6 col-12 show-mobile" style="height: 250px">
               <div class="contact-g-50">&nbsp;</div>
 
               <div class="contact-g-30">&nbsp;</div>
               <div class="contact-gr-250 hide-mobile">&nbsp;</div>
 
               <div class="contact-ab">
-                <img
-                  class="contact-img"
-                  src="./assets/images/contact.png"
-                />
+                <img class="contact-img" src="./assets/images/contact.png" />
               </div>
             </div>
             <div class="col-lg-6 col-6">
@@ -255,18 +175,12 @@
                     </div>
 
                     <div class="col">
-                      <button
-                        type="submit"
-                        class="button-primary"
-                      >
+                      <button type="submit" class="button-primary">
                         Send Message
                       </button>
                     </div>
                     <div class="col">
-                      <button
-                        type="submit"
-                        class="button-primary-cancel"
-                      >
+                      <button type="submit" class="button-primary-cancel">
                         Send Message
                       </button>
                     </div>
@@ -281,10 +195,7 @@
               <div class="contact-gr-250">&nbsp;</div>
 
               <div class="contact-ab">
-                <img
-                  class="contact-img"
-                  src="./assets/images/contact.png"
-                />
+                <img class="contact-img" src="./assets/images/contact.png" />
               </div>
             </div>
           </div>
@@ -305,23 +216,23 @@
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>أسئلة شائعة؟</span></a>
+                    <a href="faq.html"><span>أسئلة شائعة؟</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>آراء العملاء</span></a>
+                    <a href="customer-review.html"><span>آراء العملاء</span></a>
                   </div>
                 </li>
 
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>تواصل معنا</span></a>
+                    <a href="contact-us.html"> <span>تواصل معنا</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>حمل التطبيق</span></a>
+                    <a href="app.html"> <span>حمل التطبيق</span></a>
                   </div>
                 </li>
               </ul>
@@ -333,10 +244,7 @@
                 <div class="footer-widget pb-0 text-center">
                   <ul class="social-link">
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/instagram.png"
                           class="instagram"
@@ -345,10 +253,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/twitter.png"
                           class="twitter"
@@ -357,10 +262,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/google-play.png"
                           class="google-store"
@@ -369,10 +271,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/apple-play.png"
                           class="apple-store"
