--- a/index.html
+++ b/index.html
@@ -1,85 +1,38 @@
 <!DOCTYPE html>
-<html
-  lang="ar"
-  dir="rtl"
->
+<html lang="ar" dir="rtl">
   <head>
     <!-- Required Meta Tags -->
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <!-- Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/plugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/plugins.css" />
     <!-- Icon Plugins CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/iconplugins.css"
-    />
+    <link rel="stylesheet" href="assets/css/iconplugins.css" />
     <!-- Style CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/style.css"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/responsive.css"
-    />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <!-- Theme Dark CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/theme-dark.css"
-    />
+    <link rel="stylesheet" href="assets/css/theme-dark.css" />
     <!-- RTL CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/rtl.css"
-    />
+    <link rel="stylesheet" href="assets/css/rtl.css" />
     <!--own CSS-->
-    <link
-      rel="stylesheet"
-      href="assets/css/own.css"
-    />
+    <link rel="stylesheet" href="assets/css/own.css" />
     <!-- Title -->
     <title>HOMEMADEFOOD</title>
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
     <!-- Pre Loader -->
-    <!-- <div id="preloader">
-      <div id="preloader-area">
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-      </div>
-      <div class="preloader-section preloader-left"></div>
-      <div class="preloader-section preloader-right"></div>
-    </div> -->
+
     <!-- End Pre Loader -->
 
     <!-- Start Navbar Area -->
@@ -89,16 +42,8 @@
           <div class="mobile-responsive-menu">
             <div class="logo">
               <a href="index.html">
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-one"
-                  alt="logo"
-                />
-                <img
-                  src="assets/images/logo.png"
-                  class="logo-two"
-                  alt="logo"
-                />
+                <img src="assets/images/logo.png" class="logo-one" alt="logo" />
+                <img src="assets/images/logo.png" class="logo-two" alt="logo" />
               </a>
             </div>
           </div>
@@ -109,20 +54,9 @@
       <div class="desktop-nav nav-area">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-md navbar-light">
-            <a
-              class="navbar-brand"
-              href="index.html"
-            >
-              <img
-                src="assets/images/logo.png"
-                class="logo-one"
-                alt="Logo"
-              />
-              <img
-                src="assets/images/logo.png"
-                class="logo-two"
-                alt="Logo"
-              />
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
+              <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
 
             <div
@@ -131,48 +65,25 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    href="home.html"
-                    class="nav-link"
-                  >
-                    من نحن؟
-                  </a>
+                  <a href="home.html" class="nav-link"> من نحن؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="faq.html"
-                    class="nav-link"
-                  >
-                    أسئلة شائعة؟
-                  </a>
+                  <a href="faq.html" class="nav-link"> أسئلة شائعة؟ </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="customer-review.html"
-                    class="nav-link"
-                  >
+                  <a href="customer-review.html" class="nav-link">
                     آراء العملاء
                   </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="contact-us.html"
-                    class="nav-link"
-                  >
-                    تواصل معنا
-                  </a>
+                  <a href="contact-us.html" class="nav-link"> تواصل معنا </a>
                 </li>
 
                 <li class="nav-item">
-                  <a
-                    href="app.html"
-                    class="nav-link"
-                  >
-                    حمل التطبيق
-                  </a>
+                  <a href="app.html" class="nav-link"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
@@ -184,10 +95,7 @@
 
     <div class="featured-area pt-10 first-section">
       <div class="home-header">
-        <img
-          class="img-header"
-          src="/assets/images/home-header.png"
-        />
+        <img class="img-header" src="/assets/images/home-header.png" />
       </div>
       <div class="green-30-25">&nbsp;</div>
       <div class="green-10-15">&nbsp;</div>
@@ -196,10 +104,7 @@
       <div class="green-30-80">&nbsp;</div>
 
       <div class="img-footer-relative">
-        <img
-          class="img-footer"
-          src="/assets/images/home-header-bottom.png"
-        />
+        <img class="img-footer" src="/assets/images/home-header-bottom.png" />
       </div>
     </div>
 
@@ -229,19 +134,11 @@
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="hand-absolute">
-        <img
-          src="./assets/images/hand.png"
-          class="w-350"
-          alt="img"
-        />
+        <img src="./assets/images/hand.png" class="w-350" alt="img" />
       </div>
       <div class="container">
         <div class="absolute-l-60">
-          <img
-            src="./assets/images/third-top.png"
-            class="w-200"
-            alt="img"
-          />
+          <img src="./assets/images/third-top.png" class="w-200" alt="img" />
         </div>
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
@@ -292,10 +189,7 @@
         </div>
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -305,10 +199,7 @@
             </p>
           </div>
           <div class="testimonials-item">
-            <img
-              src="assets/images/pic.png"
-              alt="testimonials"
-            />
+            <img src="assets/images/pic.png" alt="testimonials" />
 
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
@@ -342,23 +233,23 @@
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>أسئلة شائعة؟</span></a>
+                    <a href="faq.html"><span>أسئلة شائعة؟</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"><span>آراء العملاء</span></a>
+                    <a href="customer-review.html"><span>آراء العملاء</span></a>
                   </div>
                 </li>
 
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>تواصل معنا</span></a>
+                    <a href="contact-us.html"> <span>تواصل معنا</span></a>
                   </div>
                 </li>
                 <li>
                   <div class="content">
-                    <a href="home.html"> <span>حمل التطبيق</span></a>
+                    <a href="app.html"> <span>حمل التطبيق</span></a>
                   </div>
                 </li>
               </ul>
@@ -370,10 +261,7 @@
                 <div class="footer-widget pb-0 text-center">
                   <ul class="social-link">
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/instagram.png"
                           class="instagram"
@@ -382,10 +270,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/twitter.png"
                           class="twitter"
@@ -394,10 +279,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/google-play.png"
                           class="google-store"
@@ -406,10 +288,7 @@
                       </a>
                     </li>
                     <li>
-                      <a
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                      >
+                      <a href="https://www.facebook.com/" target="_blank">
                         <img
                           src="assets/images/apple-play.png"
                           class="apple-store"
