--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <div class="featured-area pt-100 pb-70">
+    <div class="featured-area second-section pt-100 pb-70">
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="featured-area pt-100 mb-100 pb-70">
+    <div class="featured-area pt-100 third-section mb-100 pb-70">
       <div class="hand-absolute">
         <img src="./assets/images/hand.png" class="w-350" alt="img" />
       </div>
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-    <div class="testimonials-area pb-100 mb-5">
+    <div class="testimonials-area fourth-section pb-100 mb-5">
       <div class="container">
         <div class="fif-gr-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
