--- a/index.html
+++ b/index.html
@@ -109,13 +109,15 @@
     </div>
 
     <div class="featured-area second-section pt-100 pb-70">
+      <div class="mt-100 hide-mobile">&nbsp;</div>
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div class="green-97-27 hide-mobile">&nbsp;</div>
-            <div class="green-30-5 hide-mobile">&nbsp;</div>
+
             <div class="gray-206-5 show-mobile">&nbsp;</div>
-            <div class="section-title text-center mt-rs-20">
+            <div class="mt-110 hide-mobile">&nbsp;</div>
+            <div class="section-title text-center mt-rs-20 pl-250">
               <span class="header-text">من نحن؟</span>
 
               <p class="text-26">
@@ -126,13 +128,14 @@
                 صنعه الأيادي الماهرة.
               </p>
             </div>
+            <div class="green-30-5 hide-mobile">&nbsp;</div>
             <div class="gray-206-5 hide-mobile">&nbsp;</div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="featured-area pt-100 third-section mb-100 pb-70">
+    <div class="featured-area pt-100 third-section mb-100">
       <div class="hand-absolute">
         <img src="./assets/images/hand.png" class="w-350" alt="img" />
       </div>
@@ -144,6 +147,7 @@
           <div class="col-lg-12 col-md-12">
             <div class="green-30-0">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
+              <div class="mt-33 hide-mobile">&nbsp;</div>
               <span class="header-text-second">أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
               <div class="f-270-img">
@@ -184,6 +188,7 @@
     <div class="testimonials-area fourth-section pb-100 mb-5">
       <div class="container">
         <div class="fif-gr-30">&nbsp;</div>
+
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
