--- a/faq.html
+++ b/faq.html
@@ -120,16 +120,10 @@
                 class="f-w-200 show-mobile"
                 alt="img"
               />
-
-              <img
-                src="./assets/images/fourth.png"
-                class="faq-img-200 hide-mobile"
-                alt="img"
-              />
             </div>
             <div class="faq-pic hide-mobile">
               <img
-                src="./assets/images/pic-faq.png"
+                src="./assets/images/faq1.png"
                 class="faq-pic-200"
                 alt="img"
               />
@@ -139,9 +133,11 @@
         </div>
       </div>
     </div>
+
     <div class="testimonials-area pb-100 hide-mobile mb-5">
       <div class="container">
-        <div class="faq-img-30">&nbsp;</div>
+        <div class="faq-img-30 show-mobile">&nbsp;</div>
+        <div class="mt-110 hide-mobile">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
@@ -214,6 +210,7 @@
           <img src="./assets/images/female.png" />
         </div>
       </div>
+      <div class="h-110 hide-mobile">&nbsp;</div>
     </div>
     <!-- Footer Area -->
     <footer class="footer-area">
