--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
             <div class="gray-206-5 show-mobile">&nbsp;</div>
             <div class="mt-110 hide-mobile">&nbsp;</div>
             <div class="section-title text-center mt-rs-20 pl-250">
+              <div class="mt-110 hide-mobile">&nbsp;</div>
               <span class="header-text">من نحن؟</span>
-
+              <div class="mt-110 hide-mobile">&nbsp;</div>
               <p class="text-26">
                 إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
                 المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
@@ -192,11 +193,12 @@
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
+        <div class="mt-33 hide-mobile">&nbsp;</div>
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
-            <p>
+            <h1 class="text-center testimonial-header-text">username</h1>
+            <p class="testimonial-p-text">
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
               العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
@@ -205,8 +207,8 @@
           </div>
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
-            <p>
+            <h1 class="text-center testimonial-header-text">username</h1>
+            <p class="testimonial-p-text">
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
               العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
@@ -223,6 +225,7 @@
           <img src="./assets/images/female.png" />
         </div>
       </div>
+      <div class="mt-110 hide-mobile">&nbsp;</div>
     </div>
     <!-- Footer Area -->
     <footer class="footer-area">
