--- a/customer-review.html
+++ b/customer-review.html
@@ -115,8 +115,8 @@
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
-            <p>
+            <h1 class="text-center testimonial-header-text">username</h1>
+            <p class="testimonial-p-text">
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
               العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
@@ -125,8 +125,8 @@
           </div>
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
-            <p>
+            <h1 class="text-center testimonial-header-text">username</h1>
+            <p class="testimonial-p-text">
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
               العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
