--- a/home.html
+++ b/home.html
@@ -74,9 +74,9 @@
             <div
               style="
                 background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
+                width: 70px;
+                height: 70px;
+                border-radius: 35px;
                 position: absolute;
                 left: 20px;
                 top: 40px;
@@ -132,11 +132,11 @@
                 alt="img"
               />
             </div>
+            <div class="mt-110 hide-mobile">&nbsp;</div>
+            <div class="section-title text-center pl-250 mt-rs-20">
+              <span class="header-text header-text-home">من نحن؟</span>
 
-            <div class="section-title text-center mt-rs-20">
-              <span class="header-text">من نحن؟</span>
-
-              <p class="text-26">
+              <p class="text-26-home">
                 إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
                 المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
                 مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً على
@@ -164,6 +164,7 @@
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div class="third-g-30">&nbsp;</div>
+            <div class="mt-100 hide-mobile">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <span class="header-text-second">أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
@@ -188,7 +189,7 @@
               </div>
               <div class="img-green-home">&nbsp;</div>
             </div>
-
+            <div class="home-green-sec-30">&nbsp;</div>
             <div class="img-gray-home">&nbsp;</div>
           </div>
         </div>
