--- a/contact-us.html
+++ b/contact-us.html
@@ -122,10 +122,13 @@
                 <img class="contact-img" src="./assets/images/contact.png" />
               </div>
             </div>
-            <div class="col-lg-6 col-6">
+            <div class="col-lg-7 col-6">
               <div class="contact-green-50">&nbsp;</div>
               <div class="contact-gray-250">&nbsp;</div>
               <div class="contact-form">
+                <h1 class="text-contact-header text-center show-mobile">
+                  تواصل معنا
+                </h1>
                 <form id="contactForm">
                   <div class="row">
                     <div class="col-lg-12">
@@ -137,7 +140,7 @@
                           class="form-control"
                           required
                           data-error="Please Enter Your Name"
-                          placeholder="Name"
+                          placeholder="العنوان"
                         />
                         <div class="help-block with-errors"></div>
                       </div>
@@ -152,7 +155,7 @@
                           class="form-control"
                           required
                           data-error="Please Enter Your Email"
-                          placeholder="Email"
+                          placeholder="البريد الإلكتروني"
                         />
                         <div class="help-block with-errors"></div>
                       </div>
@@ -168,27 +171,27 @@
                           rows="7"
                           required
                           data-error="Write your message"
-                          placeholder="Your Message"
+                          placeholder="هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق."
                         ></textarea>
                         <div class="help-block with-errors"></div>
                       </div>
                     </div>
 
-                    <div class="col">
+                    <div class="col col-width">
                       <button type="submit" class="button-primary">
-                        Send Message
+                        إرسال
                       </button>
                     </div>
-                    <div class="col">
+                    <div class="col col-width">
                       <button type="submit" class="button-primary-cancel">
-                        Send Message
+                        إلغاء
                       </button>
                     </div>
                   </div>
                 </form>
               </div>
             </div>
-            <div class="col-lg-6 col-12 hide-mobile">
+            <div class="col-lg-5 col-12 hide-mobile">
               <div class="contact-g-50">&nbsp;</div>
 
               <div class="contact-g-30">&nbsp;</div>
