--- a/customer-review.html
+++ b/customer-review.html
@@ -108,7 +108,17 @@
 
     <div class="testimonials-area pb-100 mb-5">
       <div class="container">
-        <div class="cus-green-30">&nbsp;</div>
+        <div class="cus-green-30 hide-mobile">&nbsp;</div>
+        <div class="cus-green-30-img show-mobile">
+          <img
+            src="assets/images/cus.png"
+            class="cus-img-20"
+            alt="testimonials"
+          />
+        </div>
+        <div class="mt-1 show-mobile">&nbsp;</div>
+        <div class="mt-1 show-mobile">&nbsp;</div>
+
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
