--- a/faq.html
+++ b/faq.html
@@ -95,14 +95,35 @@
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
-        <div class="faq-img-absolute">
+        <div class="faq-img-absolute hide-mobile">
           <img src="./assets/images/faq.png" class="faq-img-270" alt="img" />
         </div>
-
+        <div class="faq-img-absolute show-mobile">
+          <img
+            src="./assets/images/faq-header.png"
+            class="faq-img-270"
+            alt="img"
+          />
+        </div>
+        <div class="mt-140 show-mobile">&nbsp;</div>
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div class="faq-green-30 hide-mobile">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
+              <div class="f-left-faq-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-left-faq-arrow-img"
+                  alt="img"
+                />
+              </div>
+              <div class="f-right-faq-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-right-faq-arrow-img"
+                  alt="img"
+                />
+              </div>
               <span class="header-text-second-faq"> أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
 
@@ -133,7 +154,7 @@
         </div>
       </div>
     </div>
-
+    <div class="mt-140 show-mobile">&nbsp;</div>
     <div class="testimonials-area pb-100 hide-mobile mb-5">
       <div class="container">
         <div class="faq-img-30 show-mobile">&nbsp;</div>
@@ -144,7 +165,7 @@
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
@@ -154,7 +175,7 @@
           </div>
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
@@ -182,7 +203,7 @@
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
@@ -192,7 +213,7 @@
           </div>
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
