--- a/home.html
+++ b/home.html
@@ -119,13 +119,16 @@
     <!-- End Navbar Area -->
 
     <div class="featured-area pt-100 pb-70">
+      <div class="head-home-ab show-mobile">
+        <img src="./assets/images/home-img.png" class="head-home" alt="img" />
+      </div>
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div class="fea-img">
+            <div class="fea-img hide-mobile">
               <img src="./assets/images/had.png" class="fea-w-280" alt="img" />
             </div>
-            <div class="fea-hand-img">
+            <div class="fea-hand-img hide-mobile">
               <img
                 src="./assets/images/hand.png"
                 class="fea-hand-w"
@@ -133,6 +136,7 @@
               />
             </div>
             <div class="mt-110 hide-mobile">&nbsp;</div>
+
             <div class="section-title text-center pl-250 mt-rs-20">
               <span class="header-text header-text-home">من نحن؟</span>
 
@@ -165,8 +169,26 @@
           <div class="col-lg-12 col-md-12">
             <div class="third-g-30">&nbsp;</div>
             <div class="mt-100 hide-mobile">&nbsp;</div>
+            <div class="mt-140 show-mobile">&nbsp;</div>
+            <div class="mt-1 show-mobile">&nbsp;</div>
+            <div class="mt-1 show-mobile">&nbsp;</div>
+            <div class="mt-1 show-mobile">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <span class="header-text-second">أسئلة شائعة ؟</span>
+              <div class="f-left-home-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-left-home-arrow-img"
+                  alt="img"
+                />
+              </div>
+              <div class="f-right-home-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-right-home-arrow-img"
+                  alt="img"
+                />
+              </div>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
               <div class="fourth-img-des">
                 <img
@@ -190,7 +212,7 @@
               <div class="img-green-home">&nbsp;</div>
             </div>
             <div class="home-green-sec-30">&nbsp;</div>
-            <div class="img-gray-home">&nbsp;</div>
+            <div class="img-gray-home hide-mobile">&nbsp;</div>
           </div>
         </div>
       </div>
@@ -204,7 +226,7 @@
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
@@ -214,7 +236,7 @@
           </div>
           <div class="testimonials-item">
             <img src="assets/images/pic.png" alt="testimonials" />
-
+            <h1 class="text-center testimonial-header-text">username</h1>
             <p>
               هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
               هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
