--- a/index.html
+++ b/index.html
@@ -109,16 +109,20 @@
     </div>
 
     <div class="featured-area second-section pt-100 pb-70">
+      <div class="mt-170 show-mobile"></div>
       <div class="mt-100 hide-mobile">&nbsp;</div>
+      <div class="gray-206-5 show-mobile">
+        <img class="img-footer" src="/assets/images/half-circle.png" />
+      </div>
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div class="green-97-27 hide-mobile">&nbsp;</div>
 
-            <div class="gray-206-5 show-mobile">&nbsp;</div>
             <div class="mt-110 hide-mobile">&nbsp;</div>
             <div class="section-title text-center mt-rs-20 pl-250">
               <div class="mt-110 hide-mobile">&nbsp;</div>
+              <div class="mt-22 show-mobile">&nbsp;</div>
               <span class="header-text">من نحن؟</span>
               <div class="mt-110 hide-mobile">&nbsp;</div>
               <p class="text-26">
@@ -158,6 +162,21 @@
                   alt="img"
                 />
               </div>
+              <div class="f-left-index-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-left-index-arrow-img"
+                  alt="img"
+                />
+              </div>
+              <div class="f-right-index-arrow">
+                <img
+                  src="./assets/images/right.png"
+                  class="f-right-index-arrow-img"
+                  alt="img"
+                />
+              </div>
+
               <p class="text-26-des">
                 نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
@@ -186,6 +205,7 @@
         </div>
       </div>
     </div>
+    <div class="mt-140 show-mobile">&nbsp;</div>
     <div class="testimonials-area fourth-section pb-100 mb-5">
       <div class="container">
         <div class="fif-gr-30">&nbsp;</div>
